--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
       <hr>
       <nav>
         <a href="/">About</a>
-        <a href="/projects.html">Projects</a>
+        <a href="/projects">Projects</a>
         <a href="/assets/resume.pdf" target="_blank">Resume</a>
       </nav>
       <hr class="format">
