--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           startup, to sailing oceans for a living. Throughout I've always enjoyed building thoughtful solutions to technical problems.
           <br><br>
           Most recently I built <a href="https://try-firefly.github.io" target="_blank">Firefly,</a>an observability framework for serverless functions.
-          The tools and languages in which I am most comfortable are: JavaScript/Nodejs, Go, Ruby, AWS, Docker, SQL, Git and React.
+          The tools and languages in which I am most comfortable are: JavaScript, Go, Ruby, Node.js, AWS, Docker, SQL, Git and React.
         </p>
       </section>
       <hr class="format">
