--- a/index.html
+++ b/index.html
@@ -5,37 +5,69 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="marcus sinkinson" />
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <div class="main">
       <header>
         <h1 class="name">Marcus Sinkinson</h1>
-        <img class="right" src="/assets/img/favicon.png" alt="narwhal" width="60" height="60">
+        <img
+          class="right"
+          src="/assets/img/favicon.png"
+          alt="narwhal"
+          width="60"
+          height="60"
+        />
       </header>
-      <hr>
+      <hr />
       <nav>
         <a href="/">About</a>
         <a href="/projects">Projects</a>
         <a href="/assets/resume.pdf" target="_blank">Resume</a>
       </nav>
-      <hr class="format">
+      <hr class="format" />
       <section class="format">
         <p>
-          Software Engineer based in Amsterdam. My life and career so far has been exceptionally wide ranging—everything from working on my own
-          startup, to sailing oceans for a living. Throughout I've always enjoyed building thoughtful solutions to technical problems.
-          <br><br>
-          Most recently I built <a href="https://try-firefly.github.io" target="_blank">Firefly,</a>an observability framework for serverless functions.
-          The tools and languages in which I am most comfortable are: JavaScript, Go, Ruby, Node.js, AWS, Docker, SQL, Git and React.
+          Software Engineer based in Amsterdam. My life and career so far has
+          been exceptionally wide ranging—everything from working on my own
+          startup, to sailing oceans for a living. Throughout I've always
+          enjoyed building thoughtful solutions to technical problems.
+          <br /><br />
+          Most recently I built
+          <a href="https://try-firefly.github.io" target="_blank">Firefly,</a>an
+          observability framework for serverless functions. The tools and
+          languages in which I am most comfortable are: JavaScript, Go, Ruby,
+          Node.js, AWS, Docker, SQL, Git and React.
         </p>
       </section>
-      <hr class="format">
+      <hr class="format" />
       <footer>
-        <a href="https://github.com/Sinkinson" target="_blank"><img src="/assets/img/icons/github.png" alt="github icon" width="35" height="35"></a>
-        <a href="https://www.linkedin.com/in/marcussinkinson/" target="_blank"><img src="/assets/img/icons/linkedin.png" alt="linkedin icon" width="35" height="35"></a>
-        <a href="mailto:sinkinsonmarcus@gmail.com" target="_blank"><img src="/assets/img/icons/mail.png" alt="mail icon" width="35" height="35"></a>
+        <a href="https://github.com/Sinkinson" target="_blank"
+          ><img
+            src="/assets/img/icons/github.png"
+            alt="github icon"
+            width="35"
+            height="35"
+        /></a>
+        <a href="https://www.linkedin.com/in/marcussinkinson/" target="_blank"
+          ><img
+            src="/assets/img/icons/linkedin.png"
+            alt="linkedin icon"
+            width="35"
+            height="35"
+        /></a>
+        <a href="mailto:sinkinsonmarcus@gmail.com" target="_blank"
+          ><img
+            src="/assets/img/icons/mail.png"
+            alt="mail icon"
+            width="35"
+            height="35"
+        /></a>
       </footer>
     </div>
   </body>
