--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Marcus Sinkinson</title>
@@ -28,7 +28,6 @@
       <nav>
         <a href="/">About</a>
         <a href="/projects">Projects</a>
-        <a href="/assets/resume.pdf" target="_blank">Resume</a>
       </nav>
       <hr class="format" />
       <section class="format">
@@ -53,55 +52,6 @@
             alt="firefly architecture"
             width="700"
         /></a>
-      </section>
-      <hr class="format" />
-      <section class="format">
-        <b>Hook Inspect</b>
-        <br /><br />
-        <p>
-          A request-bin like tool for receiving and debugging webhooks. Built
-          with Node.js, MongoDB, PostgreSQL, Handlebars, Ngrok and Express.
-        </p>
-        <img
-          src="/assets/img/hookinspect.png"
-          alt="hook inspect image"
-          width="700"
-        />
-      </section>
-      <hr class="format" />
-      <section class="format">
-        <table>
-          <tr>
-            <th>AtomTask</th>
-            <th>EcomCart</th>
-          </tr>
-          <tr>
-            <td>
-              A personal task management app made with Ruby and Sinatra. Built
-              to explore the Sinatra framework.
-            </td>
-            <td>
-              A database backed e-commerce shopping cart. Built with React,
-              Express, Node.js and MongoDB.
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img
-                src="/assets/img/atomtask.png"
-                alt="atom task image"
-                width="700"
-              />
-            </td>
-            <td>
-              <img
-                src="/assets/img/ecomcart.png"
-                alt="ecom cart image"
-                width="700"
-              />
-            </td>
-          </tr>
-        </table>
       </section>
       <hr class="format" />
       <footer>
