--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Marcus Sinkinson</title>
@@ -28,7 +28,6 @@
       <nav>
         <a href="/">About</a>
         <a href="/projects">Projects</a>
-        <a href="/assets/resume.pdf" target="_blank">Resume</a>
       </nav>
       <hr class="format" />
       <section class="format">
